--- a/block-BHaabu/index.html
+++ b/block-BHaabu/index.html
@@ -30,8 +30,10 @@
         </div>
     </section>
     <section>
-        <div class="img"><img src="https://natureconservancy-h.assetsadobe.com/is/image/content/dam/tnc/nature/en/photos/Zugpsitze_mountain.jpg?crop=0,176,3008,1654&wid=4000&hei=2200&scl=0.752" alt="image"></div>
-    </section>
+        <div class="boxs big-box ">
+            box-4
+        </div>
+       </section>
 </main>
 </body>
 </html>
